--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass = 'org.gradle.sample.Main'
 }
 
 group = 'hexlet.code'
